P2/Arrays/01/var/archive/xmlreports/0/0/1/000034
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="34" judge-id="33" status="CE" scoring="ACM" run-tests="0" contest-id="201" compile-error="yes" >
  <uuid>e7b9b3e3-6b60-4804-b3e9-e725a906d715</uuid>
  <compiler_output>000034.cpp:1:20: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include &lt;iostream&gt;;
                   ^
                   //
000034.cpp:6:13: error: array initializer must be an initializer list
                const int a[5] = 1 2 3 4 5 ;
                          ^
000034.cpp:6:21: error: expected ';' at end of declaration
                const int a[5] = 1 2 3 4 5 ;
                                  ^
                                  ;
000034.cpp:11:3: error: use of undeclared identifier 'system'
                system(&quot;pause&quot;);
                ^
1 warning and 3 errors generated.
</compiler_output>
</testing-report>
